--- a/idex.html
+++ b/idex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-FR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
     <section class="hero">
         <h1>Construisez un intérieur chez vous</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, magni numquam, illum fugit mollitia, saepe voluptatem harum suscipit quos illo quae atque. Repellendus ad eveniet veritatis numquam omnis mollitia nam. </p>
-        <a href="#nosProjets">Nos projets</a>
+        <a href="#nosProjets" class="bouton">Nos projets</a>
     </section>
     <!--section services-->
     <section>
@@ -79,8 +79,8 @@
         <!--div 4-->
         <div><img src="" alt=""></div>
     </section>
-    <section>
     <!--section choisir nos services-->
+    <section>
     <iframe src="" frameborder="0"></iframe>
     <div>
         <h2>Pourquoi choisir nos services de desgn d'intérieur</h2>
